prop is called build_type, not workflow. Update pre-commits

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,21 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 ---
-    repos:
-      - repo: https://github.com/pre-commit/pre-commit-hooks
-        rev: v2.0.0
-        hooks:
-          - id: trailing-whitespace
-          - id: end-of-file-fixer
-          - id: check-yaml
-      - repo: git://github.com/antonbabenko/pre-commit-terraform
-        rev: v1.44.0
-        hooks:
-          - id: terraform_fmt
-          - id: terraform_docs_without_aggregate_type_defaults
+repos:
+- repo: https://github.com/antonbabenko/pre-commit-terraform
+  rev: v1.83.2
+  hooks:
+    - id: terraform_fmt
+    - id: terraform_docs_without_aggregate_type_defaults
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+    - id: trailing-whitespace # trims trailing whitespace.
+    - id: end-of-file-fixer # ensures that a file is either empty, or ends with one newline.
+    - id: check-yaml # checks yaml files for parseable syntax.
+    - id: detect-private-key # detects the presence of private keys.
+    - id: mixed-line-ending # replaces or checks mixed line ending.
+      args: [ "--fix=auto" ]
+    - id: no-commit-to-branch
+      args:
+      - --branch=main
