--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,16 @@ jobs:
     name: Lint Terraform
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: hashicorp/setup-terraform@v1
+      - uses: actions/checkout@v4
+      - id: tf_version
+        name: "Get terraform version"
+        uses: 'ministryofjustice/opg-github-actions/.github/actions/terraform-version@v2.3.1'
         with:
-          terraform_version: 1.3.7
+          terraform_directory: "./"
+      - name: "Setup terraform [version: ${{ steps.tf_version.outputs.version }}]"
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ steps.tf_version.outputs.version }}
       - name: terraform fmt
         run: |
           terraform fmt -check -recursive
