--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,16 @@ jobs:
     name: Lint Terraform
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: hashicorp/setup-terraform@v1
+      - uses: actions/checkout@v4
+      - id: tf_version
+        name: "Get terraform version"
+        uses: 'ministryofjustice/opg-github-actions/.github/actions/terraform-version@v2.3.1'
         with:
-          terraform_version: 1.3.7
+          terraform_directory: "./"
+      - name: "Setup terraform [version: ${{ steps.tf_version.outputs.version }}]"
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ steps.tf_version.outputs.version }}
       - name: terraform fmt
         run: |
           terraform fmt -check -recursive
@@ -29,29 +35,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-      - uses: actions/checkout@v3
+      - name: "Generate semver tag and release"
+        id: semver_tag
+        uses: ministryofjustice/opg-github-actions/.github/actions/semver-tag@v2.3.1
         with:
-          ref: ${{ github.sha }}
-          fetch-depth: '0'
-      - name: Extract branch name
-        id: extract_branch
-        run: |
-          if [ "$GITHUB_EVENT_NAME" == "push" ]; then
-            echo BRANCH_NAME=main >> $GITHUB_ENV
-          else
-            echo BRANCH_NAME=${{ github.head_ref }} >> $GITHUB_ENV
-          fi
-      - name: Bump version
-        id: bump_version
-        uses: anothrNick/github-tag-action@1.61.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          INITIAL_VERSION: 1.0.0
-          DEFAULT_BUMP: minor
-          PRERELEASE_SUFFIX: ${{ env.BRANCH_NAME }}
-          PRERELEASE: ${{ !startsWith(env.BRANCH_NAME, 'main') }}
-          RELEASE_BRANCHES: main
-          WITH_V: true
-      - name: Summary
-        run: |
-          echo "Tag: ${{ steps.bump_version.outputs.new_tag }}" >> $GITHUB_STEP_SUMMARY
+          prerelease: ${{ github.ref != 'refs/heads/main' }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
